[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["culturgen", "culturgen.*"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file = ["README.md", "NEWS.md"], content-type = "text/markdown" }

[project]
name = "culturgen"
version = "0.3.0.dev0"
description = "Know Your Meme scraper, a rewrite of memedict."
authors = [
    { name = "dgw", email = "dgw@technobabbl.es" },
]
license = { text = "MIT" }
dynamic = ["readme"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "beautifulsoup4>=4.5",
    "jellyfish~=1.1",
    "requests>=2.10",
]

[project.urls]
"Homepage" = "https://github.com/dgw/culturgen"
"Bug Tracker" = "https://github.com/dgw/culturgen/issues"
